# onid

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: smoke.yaml
paper/: report.md
scripts/: run_full_dense_experiments.sh
src/onid/: __init__.py  hf_models.py  models.py  pairs.py  smoke.py  train.py
src/onid.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
